--- a/style.css
+++ b/style.css
@@ -1,5 +1,56 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+body {
+  background-color: blue;
+  padding: 50px;
+}
+h1 {
+  color: black;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.grid {
+  background-color: #ffffff;
+  color: blue;
+  width: 100%;
+  height: 170px 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-rows: minmax(170px, auto);
+  grid-gap: 10px;
+  justify-content: center;
+}
+.masonry1 {
+  grid-row: span 2;
+}
+.overiep {
+  grid-column-start: 3;
+  grid-column-end: 5;
+}
+.named {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 4;
+}
+.placed {
+  grid-column-start: 3;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+.masonary3 {
+  grid-column: 4 / span 1;
+}
+.flexible {
+  grid-row-start: 3;
+}
+.masonary2 {
+  grid-row-start: 3;
+  grid-row-end: 5;
 }
